# sample-wealth-advisor-demo-platform

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaksignore  .nxignore  README.md  buildspec-app.yml  buildspec-platform.yml  components.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run_agentcore_tests.sh  tsconfig.base.json  tsconfig.json
.husky/: pre-push
data-platform/: .gitignore  Makefile  Makefile.template  README.md  init.sh  set-env-vars.sh.template
data-platform/data/financial_advisor/: accounts.csv  advisors.csv  articles.csv  client_income_expense.csv  client_investment_restrictions.csv  client_reports.csv  clients.csv  compliance.csv  crawl_log.csv  documents.csv  fees.csv  goals.csv  holdings.csv  interactions.csv  performance.csv  portfolio_config.csv  portfolios.csv  recommended_products.csv  research.csv  securities.csv  theme_article_associations.csv  transactions.csv
data-platform/data/rum/: rum_errors.csv  rum_page_views.csv  rum_performance.csv
data-platform/ddl-redshift/: redshift-rum-tables.sql  redshift-tables-bkp.sql  redshift-tables.sql  redshift-views-s3tables.sql  redshift-views.sql  unload-redshift-data.sql
data-platform/docs/main/: data-assets-setup.md  solutions-deployment.md
data-platform/glossary/: business_glossary_terms.csv  table_metadata.csv  view_metadata.csv
data-platform/iac/bootstrap/: parameters-crr.json.template  parameters-secondary.json.template  parameters.json.template
data-platform/iac/roots/athena/: backend.tf.template
data-platform/iac/roots/common/file-generator/: equity_orders_generator.py  equity_trade_generator.py  price_generator.py
data-platform/iac/roots/common/msk-provisioned/: backend.tf.template  msk.tf  terraform.tfvars.template
data-platform/iac/roots/datalakes/financial-advisor-s3-glue-s3/: README.md  backend.tf.template  bucket.tf  catalog-permissions.tf  glue.tf  load_data_to_redshift.py  load_data_to_s3table.py  outputs.tf  provider.tf  s3table.tf  terraform.tfvars.template  variables.tf
data-platform/iac/roots/datazone/data-assets-glossary/: backend.tf.template  data-sources.tf  glossary.tf  iam.tf  lookup.tf  outputs.tf  provider.tf  variables.tf
data-platform/iac/roots/foundation/buckets/: backend.tf.template  provider.tf
data-platform/iac/roots/foundation/iam-roles/: backend.tf.template  iam.tf  terraform.tfvars.template
data-platform/iac/roots/foundation/kms-keys/: backend.tf.template
data-platform/iac/roots/foundation/msk-serverless/: backend.tf.template  ec2.tf  lambda.tf  lookup.tf  main.tf  security_group.tf  terraform.tfvars.template
data-platform/iac/roots/network/: backend.tf.template  terraform.tfvars.template
data-platform/scripts/: ci-init.sh  wait-glue-jobs.sh
data-platform/utility-scripts/: empty-s3.sh
data/neptune/: advisor_client_graph_data.csv
docs/kiro-plan/: codebuild-dev-experience.md  data-platform-init-robustness.md
scripts/: allow-redshift-access.sh  chat-cli.py  crawl-and-save-articles-local.py  create-user.mjs  deploy-report-views.sh  generate-env-from-ssm.sh  generate-general-themes-local.py  grant-lf-permissions.mjs  grant-redshift-permissions.mjs  load-neptune-data.py  query-theme-pipeline.py  setup-ses-identity.sh  setup-ssm-params.sh  setup-vpc-private-subnets.sh  setup.mjs  ssm-tunnel.mjs  start-agents.sh  test-async-theme-generator-local.py  test-general-themes-lambda.py  test-local-server-integration.py  test-mcp-comprehensive.py  test-mcp-comprehensive.sh  test-portfolio-themes-local.py  test-portfolio-themes-mcp-sdk.py  test-portfolio-themes-mcp-sdk.sh  test-report-invocation.py  test-report-invocation.sh  test-rss-feeds.py  test-web-crawler-local.py  test-web-crawler-mcp-sdk.py  test-web-crawler-mcp-sdk.sh  test-web-crawler-mcp.py  test-web-crawler-mcp.sh  trigger-build.sh  upload-source.sh
(+56 files in other folders)
